Add Client Login link to navigation menu

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
                 <div class="logo">
                     <h1>Tsingz<span>Solutions</span></h1>
                 </div>
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+                <<ul class="nav-links">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <!-- Add this line: -->
+    <li><a href="login.html" class="btn btn-secondary" style="padding: 8px 20px; margin-left: 15px;">Client Login</a></li>
+</ul>
                 <div class="hamburger">
                     <i class="fas fa-bars"></i>
                 </div>
